[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sd-lora-tools"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "tqdm",
    "safetensors",
    "packaging", # safetensors needs this
    # PyTorch should be installed separately
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"